// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert-to-flat-config generator should add env configuration 1`] = `
"const nxEslintPlugin = require('@nx/eslint-plugin');
const globals = require('globals');
module.exports = [
  { plugins: { '@nx': nxEslintPlugin } },
  { languageOptions: { globals: { ...globals.browser, ...globals.node } } },
  {
    files: ['**/*.ts', '**/*.tsx', '**/*.js', '**/*.jsx'],
    rules: {
      '@nx/enforce-module-boundaries': [
        'error',
        {
          enforceBuildableLibDependency: true,
          allow: [],
          depConstraints: [
            {
              sourceTag: '*',
              onlyDependOnLibsWithTags: ['*'],
            },
          ],
        },
      ],
    },
  },
  {
    files: ['**/*.ts', '**/*.tsx'],
    extends: ['plugin:@nx/typescript'],
    rules: {},
  },
  {
    files: ['**/*.js', '**/*.jsx'],
    extends: ['plugin:@nx/javascript'],
    rules: {},
  },
];
"
`;

exports[`convert-to-flat-config generator should add global and env configuration 1`] = `
"const nxEslintPlugin = require('@nx/eslint-plugin');
const globals = require('globals');
module.exports = [
  { plugins: { '@nx': nxEslintPlugin } },
  {
    languageOptions: {
      globals: { ...globals.browser, myCustomGlobal: 'readonly' },
    },
  },
  {
    files: ['**/*.ts', '**/*.tsx', '**/*.js', '**/*.jsx'],
    rules: {
      '@nx/enforce-module-boundaries': [
        'error',
        {
          enforceBuildableLibDependency: true,
          allow: [],
          depConstraints: [
            {
              sourceTag: '*',
              onlyDependOnLibsWithTags: ['*'],
            },
          ],
        },
      ],
    },
  },
  {
    files: ['**/*.ts', '**/*.tsx'],
    extends: ['plugin:@nx/typescript'],
    rules: {},
  },
  {
    files: ['**/*.js', '**/*.jsx'],
    extends: ['plugin:@nx/javascript'],
    rules: {},
  },
];
"
`;

exports[`convert-to-flat-config generator should add global configuration 1`] = `
"const nxEslintPlugin = require('@nx/eslint-plugin');
module.exports = [
  { plugins: { '@nx': nxEslintPlugin } },
  { languageOptions: { globals: { myCustomGlobal: 'readonly' } } },
  {
    files: ['**/*.ts', '**/*.tsx', '**/*.js', '**/*.jsx'],
    rules: {
      '@nx/enforce-module-boundaries': [
        'error',
        {
          enforceBuildableLibDependency: true,
          allow: [],
          depConstraints: [
            {
              sourceTag: '*',
              onlyDependOnLibsWithTags: ['*'],
            },
          ],
        },
      ],
    },
  },
  {
    files: ['**/*.ts', '**/*.tsx'],
    extends: ['plugin:@nx/typescript'],
    rules: {},
  },
  {
    files: ['**/*.js', '**/*.jsx'],
    extends: ['plugin:@nx/javascript'],
    rules: {},
  },
];
"
`;

exports[`convert-to-flat-config generator should add global gitignores 1`] = `
"const nxEslintPlugin = require('@nx/eslint-plugin');
module.exports = [
  { plugins: { '@nx': nxEslintPlugin } },
  {
    files: ['**/*.ts', '**/*.tsx', '**/*.js', '**/*.jsx'],
    rules: {
      '@nx/enforce-module-boundaries': [
        'error',
        {
          enforceBuildableLibDependency: true,
          allow: [],
          depConstraints: [
            {
              sourceTag: '*',
              onlyDependOnLibsWithTags: ['*'],
            },
          ],
        },
      ],
    },
  },
  {
    files: ['**/*.ts', '**/*.tsx'],
    extends: ['plugin:@nx/typescript'],
    rules: {},
  },
  {
    files: ['**/*.js', '**/*.jsx'],
    extends: ['plugin:@nx/javascript'],
    rules: {},
  },
  { ignores: ['ignore/me'] },
];
"
`;

exports[`convert-to-flat-config generator should add parser 1`] = `
"const nxEslintPlugin = require('@nx/eslint-plugin');
const typescriptEslintParser = require('@typescript-eslint/parser');
module.exports = [
  { plugins: { '@nx': nxEslintPlugin } },
  { languageOptions: { parser: typescriptEslintParser } },
  {
    files: ['**/*.ts', '**/*.tsx', '**/*.js', '**/*.jsx'],
    rules: {
      '@nx/enforce-module-boundaries': [
        'error',
        {
          enforceBuildableLibDependency: true,
          allow: [],
          depConstraints: [
            {
              sourceTag: '*',
              onlyDependOnLibsWithTags: ['*'],
            },
          ],
        },
      ],
    },
  },
  {
    files: ['**/*.ts', '**/*.tsx'],
    extends: ['plugin:@nx/typescript'],
    rules: {},
  },
  {
    files: ['**/*.js', '**/*.jsx'],
    extends: ['plugin:@nx/javascript'],
    rules: {},
  },
];
"
`;

exports[`convert-to-flat-config generator should add plugins 1`] = `
"const eslintPluginImport = require('eslint-plugin-import');
const eslintPluginSingleName = require('eslint-plugin-single-name');
const scopeEslintPluginWithName = require('@scope/eslint-plugin-with-name');
const justScopeEslintPlugin = require('@just-scope/eslint-plugin');
module.exports = [
  {
    plugins: {
      'eslint-plugin-import': eslintPluginImport,
      'single-name': eslintPluginSingleName,
      '@scope/with-name': scopeEslintPluginWithName,
      '@just-scope': justScopeEslintPlugin,
    },
  },
  {
    files: ['**/*.ts', '**/*.tsx', '**/*.js', '**/*.jsx'],
    rules: {
      '@nx/enforce-module-boundaries': [
        'error',
        {
          enforceBuildableLibDependency: true,
          allow: [],
          depConstraints: [
            {
              sourceTag: '*',
              onlyDependOnLibsWithTags: ['*'],
            },
          ],
        },
      ],
    },
  },
  {
    files: ['**/*.ts', '**/*.tsx'],
    extends: ['plugin:@nx/typescript'],
    rules: {},
  },
  {
    files: ['**/*.js', '**/*.jsx'],
    extends: ['plugin:@nx/javascript'],
    rules: {},
  },
];
"
`;

exports[`convert-to-flat-config generator should add settings 1`] = `
"const nxEslintPlugin = require('@nx/eslint-plugin');
module.exports = [
  { plugins: { '@nx': nxEslintPlugin } },
  { settings: { sharedData: 'Hello' } },
  {
    files: ['**/*.ts', '**/*.tsx', '**/*.js', '**/*.jsx'],
    rules: {
      '@nx/enforce-module-boundaries': [
        'error',
        {
          enforceBuildableLibDependency: true,
          allow: [],
          depConstraints: [
            {
              sourceTag: '*',
              onlyDependOnLibsWithTags: ['*'],
            },
          ],
        },
      ],
    },
  },
  {
    files: ['**/*.ts', '**/*.tsx'],
    extends: ['plugin:@nx/typescript'],
    rules: {},
  },
  {
    files: ['**/*.js', '**/*.jsx'],
    extends: ['plugin:@nx/javascript'],
    rules: {},
  },
];
"
`;

exports[`convert-to-flat-config generator should run successfully 1`] = `
"const nxEslintPlugin = require('@nx/eslint-plugin');
module.exports = [
  { plugins: { '@nx': nxEslintPlugin } },
  {
    files: ['**/*.ts', '**/*.tsx', '**/*.js', '**/*.jsx'],
    rules: {
      '@nx/enforce-module-boundaries': [
        'error',
        {
          enforceBuildableLibDependency: true,
          allow: [],
          depConstraints: [
            {
              sourceTag: '*',
              onlyDependOnLibsWithTags: ['*'],
            },
          ],
        },
      ],
    },
  },
  {
    files: ['**/*.ts', '**/*.tsx'],
    extends: ['plugin:@nx/typescript'],
    rules: {},
  },
  {
    files: ['**/*.js', '**/*.jsx'],
    extends: ['plugin:@nx/javascript'],
    rules: {},
  },
];
"
`;

exports[`convert-to-flat-config generator should run successfully 2`] = `
"const baseConfig = require('../../eslint.config.js');
module.exports = [
  ...baseConfig,
  {
    files: [
      'libs/test-lib/**/*.ts',
      'libs/test-lib/**/*.tsx',
      'libs/test-lib/**/*.js',
      'libs/test-lib/**/*.jsx',
    ],
    rules: {},
  },
  {
    files: ['libs/test-lib/**/*.ts', 'libs/test-lib/**/*.tsx'],
    rules: {},
  },
  {
    files: ['libs/test-lib/**/*.js', 'libs/test-lib/**/*.jsx'],
    rules: {},
  },
];
"
`;
